@@ -1,2 +1,17 @@
 # Six's Mammoth Pack
  
+Working title - final title not yet decided on.
+
+## Current Status
+
+489 mods. The game runs with minimal TPS drops, but needs tweaking and working on. No customization implemented yet.
+
+## Info
+
+Because of how many mods are in this pack, creating a singleplayer world takes approximately 9 minutes (I counted), please be patient!
+
+## Important
+
+To run, please use 8GB of RAM and these JVM arguments:
+
+> -Xss4M -Dfile.encoding=GBK -XX:+AggressiveOpts -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSConcurrentMTEnabled -XX:ParallelGCThreads=8 -Dsun.rmi.dgc.server.gcInterval=1800000 -XX:+UnlockExperimentalVMOptions -XX:+ExplicitGCInvokesConcurrent -XX:MaxGCPauseMillis=50 -XX:+AlwaysPreTouch -XX:+UseStringDeduplication -Dfml.ignorePatchDiscrepancies=true -Dfml.ignoreInvalidMinecraftCertificates=true -XX:-OmitStackTraceInFastThrow -XX:+OptimizeStringConcat -XX:+UseAdaptiveGCBoundary -XX:NewRatio=3 -Dfml.readTimeout=90 -XX:+UseFastAccessorMethods -XX:CMSInitiatingOccupancyFraction=75 -XX:+CMSScavengeBeforeRemark -XX:+UseCMSInitiatingOccupancyOnly
